--- a/styles/language-blade.atom-text-editor.less
+++ b/styles/language-blade.atom-text-editor.less
@@ -1,3 +1,3 @@
-.support.function.construct.end.blade .source.php {
+.syntax--support.syntax--function.syntax--construct.syntax--end.syntax--blade .syntax--source.syntax--php {
   color: inherit;
 }
