Unset all styles instead

--- a/styles/language-blade.atom-text-editor.less
+++ b/styles/language-blade.atom-text-editor.less
@@ -1,3 +1,3 @@
 .syntax--support.syntax--function.syntax--construct.syntax--end.syntax--blade .syntax--source.syntax--php {
-  all: inherit;
+  all: unset;
 }
